# autorunner

./: .gitignore  README.md  __init__.py  pyproject.toml
autorunner/: cli.py  config.py
images/: .gitkeep
