[tool.poetry]
name = "autorunner"
version = "0.1.0"
description = "Auto Clicker - Automates clicking buttons to start and end rounds in an application"
authors = ["Finn <finnborge@gmail.com>"]
readme = "README.md"
packages = [{include = "autorunner"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pyautogui = "^0.9.54"
pillow = "^10.0.0"
opencv-python = "^4.11.0.86"

[tool.poetry.scripts]
autorunner = "autorunner.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
